--- a/src/main/resources/templates/administrators/admin__prawn-registration.html
+++ b/src/main/resources/templates/administrators/admin__prawn-registration.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="flex-row admin-header">
-        <a th:href="@{/adminMenu}">
+        <a th:href="@{/admin/main}">
             <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
