css buttons refactor

--- a/src/main/resources/static/css/administrators/admin__employees.css
+++ b/src/main/resources/static/css/administrators/admin__employees.css
@@ -12,24 +12,22 @@ body {
     font-size: 20px;
     position: relative;
     cursor: pointer;
-}
-
-.button_unpressed {
     box-shadow: 0 5px #cacaca;
     background: white;
 }
 
-.button_unpressed:hover {
+.button:hover:not(.button_pressed) {
     top: 2px;
     box-shadow: 0 3px #cacaca;
 }
 
-.button_unpressed:active {
+.button:active:not(.button_pressed) {
     top: 5px;
     box-shadow: none;
 }
 
 .button_pressed {
+    box-shadow: none;
     outline: none;
     background: lightgreen;
     cursor: default;
@@ -42,14 +40,9 @@ body {
     justify-content: center;
 }
 
-.round-button {
+.button_round {
     padding: 9px;
-    border: 1px solid black;
     border-radius: 100px;
-    color: black;
-    text-decoration: none;
-    position: relative;
-    cursor: pointer;
 }
 
 .admin-employees-grid {
