--- a/src/main/resources/templates/administrators/admin__district.html
+++ b/src/main/resources/templates/administrators/admin__district.html
@@ -11,7 +11,7 @@
 <div class="admin-employees-grid">
     <div class="flex-row admin-header">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
+            <img alt="back" th:src="@{/images/back.png}" class="icon back-button button_round">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
