--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -12,19 +12,19 @@
     <div class="admin-header">
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
-    <a class="flex-column administrators-menu-grid__district grid-button button button_unpressed">District</a>
-    <a class="flex-column administrators-menu-grid__experiments-articles grid-button button button_unpressed">Experiments
+    <a class="flex-column administrators-menu-grid__district grid-button button">District</a>
+    <a class="flex-column administrators-menu-grid__experiments-articles grid-button button">Experiments
         & Articles</a>
-    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button button_unpressed">Purchase & sale requests</a>
+    <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button">Purchase & sale requests</a>
     <a th:href="@{/admin/employee}"
-       class="flex-column administrators-menu-grid__employees grid-button button button_unpressed">Employees</a>
-    <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button button_unpressed">Prawn
+       class="flex-column administrators-menu-grid__employees grid-button button">Employees</a>
+    <a class="flex-column administrators-menu-grid__prawn-vacancies grid-button button">Prawn
         vacancies</a>
-    <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
+    <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button">Synthesized
         & confiscated weapons</a>
-    <a th:href="@{/prawnRegister}" class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawn
+    <a th:href="@{/prawnRegister}" class="flex-column administrators-menu-grid__prawn-registration grid-button button">Prawn
         registration</a>
-    <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
+    <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button">Prawns'
         job applications</a>
 </div>
 </body>
