--- a/src/main/resources/templates/customers/customer__shop.html
+++ b/src/main/resources/templates/customers/customer__shop.html
@@ -26,7 +26,7 @@
     <div class="shop-grid__search-bar">
         <span>
             <input type="search" class="shop-grid__search-bar_input input_big" placeholder="Search..."
-            ><button class="shop-grid__search-bar_button button button_unpressed">Go!</button>
+            ><button class="shop-grid__search-bar_button button">Go!</button>
         </span>
         <span class="shop-grid__search-bar_sorter">Sort by: <select class="input_big">
             <option selected>Price (asc.)</option>
