--- a/src/main/resources/templates/managers/manager__menu.html
+++ b/src/main/resources/templates/managers/manager__menu.html
@@ -13,15 +13,15 @@
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
     <div class="managers-grid__buttons flexColumn">
-        <a class="flex-column grid-button button button_unpressed">Purchase requests</a>
+        <a class="flex-column grid-button button">Purchase requests</a>
         <a th:href="@{/prawnRegister}"
-           class="flex-column administrators-menu-grid__prawn-registration grid-button button button_unpressed">Prawns
+           class="flex-column administrators-menu-grid__prawn-registration grid-button button">Prawns
             registrations</a>
-        <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button button_unpressed">Synthesized
+        <a class="flex-column administrators-menu-grid__synthesized-confiscated-weapons grid-button button">Synthesized
             & confiscated weapons</a>
-        <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button button_unpressed">Prawns'
+        <a class="flex-column administrators-menu-grid__prawn-job-applications grid-button button">Prawns'
             job applications</a>
-        <a class="flex-column grid-button button button_unpressed">Equipment
+        <a class="flex-column grid-button button">Equipment
             change</a>
     </div>
 </div>
