--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -37,7 +37,7 @@
                 <label class="login-page__checkbox" for="manufacturerRadio">Manufacturer</label>
             </div>
         </div>
-        <input type="submit" class="login-page__item button button_unpressed" value="Register">
+        <input type="submit" class="login-page__item button" value="Register">
     </form>
 </div>
 </body>
