--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -13,9 +13,9 @@
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
     <button id="experiments-button" class="scientists-grid__experiments grid-button button button_pressed">Experiments</button>
-    <button id="articles-button" class="scientists-grid__articles grid-button button button_unpressed">Articles</button>
-    <a id="new-experiment-button" th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button button_unpressed">Add Experiment</a>
-    <a id="new-article-button" th:href="@{/sci/article}" class="scientists-grid__add grid-button button button_unpressed hidden">Write Article</a>
+    <button id="articles-button" class="scientists-grid__articles grid-button button">Articles</button>
+    <a id="new-experiment-button" th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">Add Experiment</a>
+    <a id="new-article-button" th:href="@{/sci/article}" class="scientists-grid__add grid-button button hidden">Write Article</a>
 </div>
 <script rel="script" type="text/javascript" th:src="@{/js/scientists/sci__main.js}"></script>
 </body>
