--- a/src/main/resources/templates/security/sec__main.html
+++ b/src/main/resources/templates/security/sec__main.html
@@ -11,8 +11,8 @@
 <div class="security-grid">
     <div class="employee-info security-grid__header"> Name Surname <br> Level: x</div>
     <div class="security-flex-row security-grid__security-buttons">
-        <a class="security-buttons__change grid-button button button_unpressed">Change <br> equipment</a>
-        <a class="security-buttons_report grid-button button button_unpressed">Report on <br> a confiscated weapon</a>
+        <a class="security-buttons__change grid-button button">Change <br> equipment</a>
+        <a class="security-buttons_report grid-button button">Report on <br> a confiscated weapon</a>
     </div>
 </div>
 </body>
