--- a/src/main/resources/templates/administrators/admin__employees.html
+++ b/src/main/resources/templates/administrators/admin__employees.html
@@ -12,7 +12,7 @@
 <div class="admin-employees-grid">
     <div class="flex-row admin-header">
         <a th:href="@{/admin/main}">
-            <img alt="back" th:src="@{/images/back.png}" class="icon back-button round-button button_unpressed">
+            <img alt="back" th:src="@{/images/back.png}" class="icon button back-button button_round">
         </a>
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
@@ -53,11 +53,11 @@
         </table>
     </div>
     <div class="admin-employees-grid__buttons flex-column">
-        <img alt="Add employee" id="add-button" class="button_pressed round-button icon" th:src="@{/images/plus.png}" onclick="setAddInterface()">
-        <img alt="Edit employees" id="edit-button" class="button_unpressed round-button icon" th:src="@{/images/edit.svg}" onclick="setEditInterface()">
-        <img alt="Find employees" id="find-button" class="button_unpressed round-button icon"
+        <img alt="Add employee" id="add-button" class="button button_round button_pressed icon" th:src="@{/images/plus.png}" onclick="setAddInterface()">
+        <img alt="Edit employees" id="edit-button" class="button button_round icon" th:src="@{/images/edit.svg}" onclick="setEditInterface()">
+        <img alt="Find employees" id="find-button" class="button button_round icon"
              th:src="@{/images/magnifier.svg}" onclick="setFindInterface()">
-        <img alt="Cash Rewards" id="reward-button" class="button_unpressed round-button icon" th:src="@{/images/dollar.png}" onclick="setRewardInterface()">
+        <img alt="Cash Rewards" id="reward-button" class="button button_round icon" th:src="@{/images/dollar.png}" onclick="setRewardInterface()">
     </div>
     <div class="admin-employees-grid__inputs flex-column">
         <form action="#" th:action="@{/admin/registerEmployee}" th:object="${form}" method="post" id="add-interface" class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
@@ -73,7 +73,7 @@
                 <option th:value="manager" th:text="Manager"></option>
                 <option th:value="administrator" th:text="Administrator"></option>
             </select>
-            <input type="submit" class="button button_unpressed add-employees-inputs-grid__button" value="Add employee">
+            <input type="submit" class="button add-employees-inputs-grid__button" value="Add employee">
         </form>
         <div id="edit-interface" class="admin-employees-grid__inputs_edit hidden">
             <input type="number" placeholder="Employee id">
