--- a/src/main/resources/templates/administrators/admin__employees.html
+++ b/src/main/resources/templates/administrators/admin__employees.html
@@ -53,14 +53,14 @@
         </table>
     </div>
     <div class="admin-employees-grid__buttons flex-column">
-        <img alt="Add employee" id="add-button" class="button button_round button_pressed icon" th:src="@{/images/plus.png}" onclick="setAddInterface()">
+        <img th:classappend="${param.q} ? null : button_pressed" alt="Add employee" id="add-button" class="button button_round icon" th:src="@{/images/plus.png}" onclick="setAddInterface()">
         <img alt="Edit employees" id="edit-button" class="button button_round icon" th:src="@{/images/edit.svg}" onclick="setEditInterface()">
-        <img alt="Find employees" id="find-button" class="button button_round icon"
+        <img th:classappend="${param.q} ? button_pressed : null" alt="Find employees" id="find-button" class="button button_round icon"
              th:src="@{/images/magnifier.svg}" onclick="setFindInterface()">
         <img alt="Cash Rewards" id="reward-button" class="button button_round icon" th:src="@{/images/dollar.png}" onclick="setRewardInterface()">
     </div>
     <div class="admin-employees-grid__inputs flex-column">
-        <form action="#" th:action="@{/admin/registerEmployee}" th:object="${form}" method="post" id="add-interface" class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
+        <form th:classappend="${param.q} ? hidden : null" action="#" th:action="@{/admin/registerEmployee}" th:object="${form}" method="post" id="add-interface" class="admin-employees-grid__inputs_add add-employees-inputs-grid flex-column">
             <input th:required="true" th:field="*{username}" class="add-employees-inputs-grid__login" placeholder="Login">
             <input th:required="true" th:field="*{password}" type="password" class="add-employees-inputs-grid__password" placeholder="Password">
             <input th:required="true" th:field="*{name}" class="add-employees-inputs-grid__name" placeholder="Name">
@@ -75,22 +75,20 @@
             </select>
             <input type="submit" class="button add-employees-inputs-grid__button" value="Add employee">
         </form>
-        <div id="edit-interface" class="admin-employees-grid__inputs_edit hidden">
+        <form id="edit-interface" class="admin-employees-grid__inputs_edit hidden">
             <input type="number" placeholder="Employee id">
             <input type="number" min="1" max="10" class="add-employees-inputs-grid__lvl" placeholder="Lvl">
             <input type="number" step="10" class="add-employees-inputs-grid__salary" placeholder="Salary">
             <input placeholder="Position">
             ???
-        </div>
-        <div id="find-interface" class="admin-employees-grid__inputs_find hidden">
-            <form action="#" th:action="@{/admin/employee}" method="get">
-                <input type="text" name="q" placeholder="Search employee by name...">
-            </form>
-        </div>
-        <div id="reward-interface" class="admin-employees-grid__inputs_reward hidden">
+        </form>
+        <form th:classappend="${param.q} ? null : hidden" action="#" th:action="@{/admin/employee}" method="get" id="find-interface" class="admin-employees-grid__inputs_find">
+            <input th:value="${param.q}" type="text" name="q" placeholder="Search employee by name...">
+        </form>
+        <form id="reward-interface" class="admin-employees-grid__inputs_reward hidden">
             <input type="number" placeholder="Employee id">
             <input type="number" placeholder="Reward">
-        </div>
+        </form>
     </div>
 </div>
 </body>
