--- a/src/main/resources/templates/managers/manager__menu.html
+++ b/src/main/resources/templates/managers/manager__menu.html
@@ -11,6 +11,8 @@
 <div class="managers-grid">
     <div class="managers-grid__header">
         <div class="employee-info"> Name Surname <br> Level: x</div>
+        <img alt="Clients list" class="clientsListButton" th:src="@{/images/human_list_icon.png}">
+        <img alt="Prawns list" class="prawnsListButton" th:src="@{/images/alien_list_icon.png}">
     </div>
     <div class="managers-grid__buttons flexColumn">
         <a class="flex-column grid-button button">Purchase requests</a>
