--- a/src/main/resources/static/css/administrators/admin__prawn-registration.css
+++ b/src/main/resources/static/css/administrators/admin__prawn-registration.css
@@ -14,8 +14,13 @@ body {
 }
 
 .input_big {
+    display: block;
     font-size: 16px;
     height: 25px;
+}
+
+.form-item {
+    margin-top: 20px;
 }
 
 .admin-header {
@@ -69,12 +74,12 @@ body {
     border-radius: 100px;
 }
 
-.icon{
+.icon {
     width: 50px;
     height: 50px;
 }
 
-.flex-row{
+.flex-row {
     display: flex;
     flex-direction: row;
     justify-content: flex-start;
