--- a/src/main/resources/templates/administrators/admin__prawn-registration.html
+++ b/src/main/resources/templates/administrators/admin__prawn-registration.html
@@ -15,9 +15,18 @@
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
     <form action="#" th:action="@{/admin/registerPrawn}" th:object="${form}" method="post" class="flex-column registration-box">
-        <input th:field="*{username}" class="registration-item input_big" placeholder="Login">
-        <input th:field="*{password}" type="password" class="registration-item input_big" placeholder="Password">
-        <input th:field="*{name}" class="registration-item input_big" placeholder="Name">
+        <label class="form-item">
+            <b>Name</b>
+            <input th:field="*{name}" class="registration-item input_big" placeholder="Name">
+        </label>
+        <label class="form-item">
+            <b>Login</b>
+            <input th:field="*{username}" class="registration-item input_big" placeholder="Login">
+        </label>
+        <label class="form-item">
+            <b>Password</b>
+            <input th:field="*{password}" type="password" class="registration-item input_big" placeholder="Password">
+        </label>
         <input type="submit" class="registration-item button" value="Register">
     </form>
 </div>
