--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -10,22 +10,22 @@
 <body class="login-page">
 <div class="flex-column" style="height: 100vh">
     <form action="#" th:action="@{/auth/register}" th:object="${form}" method="post" class="flex-column login-page__box">
-        <a class="login-page__back-link" th:href="@{/auth/login}">< back</a>
-        <label>
-            Login:
-            <input th:field="*{username}" class="login-page__item input_big" placeholder="Login">
+        <a class="login-page__back-link login-page__item" th:href="@{/auth/login}">< back</a>
+        <label class="login-page__item">
+            <b>Login</b>
+            <input th:field="*{username}" class="input_big">
         </label>
-        <label>
-            Password:
-            <input th:field="*{password}" type="password" class="login-page__item input_big" placeholder="Password">
+        <label class="login-page__item">
+            <b>Password</b>
+            <input th:field="*{password}" type="password" class="input_big">
         </label>
-        <label>
-            Email:
-            <input th:field="*{email}" type="email" class="login-page__item input_big" placeholder="Email">
+        <label class="login-page__item">
+            <b>Email</b>
+            <input th:field="*{email}" type="email" class="input_big">
         </label>
-        <label>
-            Name:
-            <input th:field="*{name}" class="login-page__item input_big" placeholder="Name">
+        <label class="login-page__item">
+            <b>Name</b>
+            <input th:field="*{name}" class="input_big">
         </label>
         <div class="checkbox-flex">
             <div class="registration-checkbox">
