--- a/src/main/resources/templates/scientists/sci__new-article.html
+++ b/src/main/resources/templates/scientists/sci__new-article.html
@@ -17,11 +17,11 @@
 <form action="#" th:action="@{article}" th:object="${form}" method="post" class="flex-column">
     <label class="form-item">
         <b>Title</b>
-        <input th:field="*{title}" class="input_big">
+        <input th:required="true" th:field="*{title}" class="input_big">
     </label>
     <label class="form-item">
         <b>Article</b>
-        <textarea th:field="*{article}" class="text-area_big input_big"></textarea>
+        <textarea th:required="true" th:field="*{article}" class="text-area_big input_big"></textarea>
     </label>
     <input type="submit" class="button form-item" value="Submit article">
 </form>
