--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -28,10 +28,10 @@
             </select>
         </label>
         <label class="form-item">
-            <b>Assistant</b>
+            <b>Assistant id</b>
             <input id="assistant-id" th:field="*{assistantId}" class="input_big">
         </label>
-        <button class="form-item grid__assistants-button button">Choose assistants</button>
+        <button class="form-item grid__assistants-button button">Choose assistant</button>
         <label class="form-item">
             <b>Date</b>
             <input th:required="true" th:field="*{date}" class="input_big" type="datetime-local">
