--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -12,9 +12,9 @@
     <div class="employee-header">
         <div class="employee-info"> Name Surname <br> Level x</div>
     </div>
-    <div id="experiments-button" class="scientists-grid__experiments grid-button button button_pressed">Experiments</div>
-    <a th:href="@{/sci/main/articles}" id="articles-button" class="scientists-grid__articles grid-button button">Articles</a>
-    <a id="new-experiment-button" th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">Add Experiment</a>
+    <a th:href="@{/sci/main}" id="experiments-button" class="scientists-grid__experiments grid-button button">Experiments</a>
+    <div id="articles-button" class="scientists-grid__articles grid-button button button_pressed">Articles</div>
+    <a id="new-article-button" th:href="@{/sci/article}" class="scientists-grid__add grid-button button">Write Article</a>
 </div>
 </body>
 </html>
