--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -12,9 +12,34 @@
     <div class="employee-header">
         <div class="employee-info"> Name Surname <br> Level x</div>
     </div>
-    <div id="experiments-button" class="scientists-grid__experiments grid-button button button_pressed">Experiments</div>
-    <a th:href="@{/sci/main/articles}" id="articles-button" class="scientists-grid__articles grid-button button">Articles</a>
-    <a id="new-experiment-button" th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">Add Experiment</a>
+    <div id="experiments-button" class="scientists-grid__experiments grid-button button button_pressed">
+        Experiments
+    </div>
+    <a th:href="@{/sci/main/articles}" id="articles-button" class="scientists-grid__articles grid-button button">
+        Articles
+    </a>
+    <a id="new-experiment-button" th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">
+        Add Experiment
+    </a>
+
+    <div class="content">
+        <div class=" content__item">
+            <div class="content__header rejected">
+                <img class="content-icon" alt="rejected" th:src="@{/images/x_mark.png}">
+                <span class="header-text">
+                    Minor Exp. #NaN <b>EXPERIMENT TITLE</b>
+                </span>
+            </div>
+            <div class="content__main">
+                <b>Assistant</b> <br>
+                ASSISTANT NAME <br>
+                <b>Description</b> <br>
+                DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION
+                DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION
+                DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION
+            </div>
+        </div>
+    </div>
 </div>
 </body>
 </html>
