--- a/src/main/resources/static/css/customers/customer__shop.css
+++ b/src/main/resources/static/css/customers/customer__shop.css
@@ -11,7 +11,7 @@ body {
 .button {
     color: black;
     text-decoration: none;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 6px;
     padding: 8px 22px;
     font-size: 20px;
@@ -32,6 +32,7 @@ body {
 }
 
 .button_pressed {
+    top: 3px;
     box-shadow: none;
     outline: none;
     background: lightgreen;
