--- a/src/main/resources/static/css/scientists/sci__main.css
+++ b/src/main/resources/static/css/scientists/sci__main.css
@@ -54,7 +54,7 @@ body {
 .button {
     color: black;
     text-decoration: none;
-    border: 1px solid black;
+    border: 2px solid black;
     border-radius: 6px;
     padding: 8px 22px;
     font-size: 20px;
@@ -75,6 +75,7 @@ body {
 }
 
 .button_pressed {
+    top: 3px;
     box-shadow: none;
     outline: none;
     background: lightgreen;
@@ -86,6 +87,54 @@ body {
     flex-direction: column;
     align-items: center;
     justify-content: center;
+}
+
+.content {
+    grid-area: content;
+    text-align: center;
+}
+
+.content__item {
+    margin: 20px auto auto auto;
+    border: 2px solid black;
+    width: 70%;
+}
+
+.content__header {
+    padding: 12px 12px 10px;
+    border-bottom: 2px solid;
+    display: flex;
+}
+
+.header-text {
+    width: 100%;
+    line-height: 22px;
+}
+
+.content__main{
+    text-align: left;
+    padding: 12px;
+}
+
+.waiting {
+    background: #83e7ff;
+}
+
+.running {
+    background: #80ff85;
+}
+
+.finished {
+    background: #b5b5b5;
+}
+
+.rejected {
+    background: #d76d8059;
+}
+
+.content-icon {
+    width: 20px;
+    height: 20px;
 }
 
 .hidden {
@@ -135,7 +184,7 @@ body {
         margin: auto;
     }
 
-    .scientists-grid__add{
+    .scientists-grid__add {
         margin-top: 10px;
     }
 
