backend: position removed from child classes to parent

--- a/src/main/resources/templates/administrators/admin__employees.html
+++ b/src/main/resources/templates/administrators/admin__employees.html
@@ -30,6 +30,9 @@
                     Role
                 </td>
                 <td>
+                    Position
+                </td>
+                <td>
                     Lvl
                 </td>
                 <td>
@@ -45,6 +48,7 @@
                 <td th:text="${employee.id}"></td>
                 <td th:text="${employee.name}"></td>
                 <td th:text="${employee.user.role}"></td>
+                <td th:text="${employee.position}"></td>
                 <td th:text="${employee.level}"></td>
                 <td th:text="${employee.salary}"></td>
                 <td th:text="${employee.dateOfEmployment}"></td>
