--- a/src/main/resources/templates/administrators/admin__menu.html
+++ b/src/main/resources/templates/administrators/admin__menu.html
@@ -13,7 +13,7 @@
         <div class="employee-info"> Name Surname <br> Level: x</div>
     </div>
     <a class="flex-column administrators-menu-grid__district grid-button button">District</a>
-    <a class="flex-column administrators-menu-grid__experiments-articles grid-button button">Experiments
+    <a th:href="@{/admin/experiments}" class="flex-column administrators-menu-grid__experiments-articles grid-button button">Experiments
         & Articles</a>
     <a class="flex-column administrators-menu-grid__clients-manufacturers grid-button button">Purchase & sale requests</a>
     <a th:href="@{/admin/employee}"
