--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -12,13 +12,13 @@
     <div class="employee-header">
         <div class="employee-info"> Name Surname <br> Level x</div>
     </div>
-    <div id="experiments-button" class="scientists-grid__experiments grid-button button button_pressed">
+    <div class="scientists-grid__experiments grid-button button button_pressed">
         Experiments
     </div>
-    <a th:href="@{/sci/main/articles}" id="articles-button" class="scientists-grid__articles grid-button button">
+    <a th:href="@{/sci/main/articles}" class="scientists-grid__articles grid-button button">
         Articles
     </a>
-    <a id="new-experiment-button" th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">
+    <a th:href="@{/sci/experiment}" class="scientists-grid__add grid-button button">
         Add Experiment
     </a>
 
