--- a/src/main/resources/templates/scientists/sci__main_articles.html
+++ b/src/main/resources/templates/scientists/sci__main_articles.html
@@ -13,8 +13,8 @@
         <div class="employee-info"> Name Surname <br> Level x</div>
     </div>
     <a th:href="@{/sci/main}" id="experiments-button" class="scientists-grid__experiments grid-button button">Experiments</a>
-    <div id="articles-button" class="scientists-grid__articles grid-button button button_pressed">Articles</div>
-    <a id="new-article-button" th:href="@{/sci/article}" class="scientists-grid__add grid-button button">Write Article</a>
+    <div class="scientists-grid__articles grid-button button button_pressed">Articles</div>
+    <a th:href="@{/sci/article}" class="scientists-grid__add grid-button button">Write Article</a>
 </div>
 </body>
 </html>
