--- a/src/main/resources/templates/scientists/sci__new-experiment.html
+++ b/src/main/resources/templates/scientists/sci__new-experiment.html
@@ -34,7 +34,7 @@
         <button class="form-item grid__assistants-button button">Choose assistant</button>
         <label class="form-item">
             <b>Description</b>
-            <textarea th:field="*{description}" class="text-area_big input_big"></textarea>
+            <textarea th:required="true" th:field="*{description}" class="text-area_big input_big"></textarea>
         </label>
         <input type="submit" class="button form-item" value="Submit Experiment">
     </form>
