--- a/src/main/resources/templates/scientists/sci__main.html
+++ b/src/main/resources/templates/scientists/sci__main.html
@@ -8,6 +8,8 @@
     <title>MNU</title>
 </head>
 <body>
+<div th:if="${status}" th:text="${status}" class="flash flash_success"></div>
+<div th:if="${error}" th:text="${error}" class="flash flash_error"></div>
 <div class="scientists-grid">
     <div class="employee-header">
         <div class="employee-info"> Name Surname <br> Level x</div>
@@ -54,7 +56,7 @@
                     <div th:case="FINISHED">
                         <b> Finished on </b>
                     </div>
-                <div th:text="${exp.date}"></div>
+                <div th:text="${exp.statusDate}"></div>
                 <b>Description</b>
                 <div th:text="${exp.description}"></div>
             </div>
